0.8/_sources/user-guide/general/customizations/examples/plot_configure_check_conditions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/customizations/examples/plot_configure_check_conditions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


Configure Check Conditions
**************************

The following guide includes different options for configuring a check's condition(s):

* `Add Condition <#add-condition>`__
* `Remove / Edit a Condition <#remove-edit-a-condition>`__
* `Add a Custom Condition <#add-a-custom-condition>`__
* `Set Custom Condition Category <#set-custom-condition-category>`__

Add Condition
=============
In order to add a condition to an existing check, we can use any of the pre-defined
conditions for that check. The naming convention for the methods that add the
condition is ``add_condition_...``.

If you want to create and add your custom condition logic for parsing the check's
result value, see `Add a Custom Condition <#add-a-custom-condition>`__.

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Add a condition to a new check
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison

    check = DatasetsSizeComparison().add_condition_test_size_greater_or_equal(1000)
    check





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    DatasetsSizeComparison
    	Conditions:
    		0: Test dataset size is greater or equal to 1000



.. GENERATED FROM PYTHON SOURCE LINES 33-37

Conditions are used mainly in the context of a Suite, and displayed in the
Conditions Summary table. For example how to run in a suite you can look at
`Add a Custom Condition <#add-a-custom-condition>`__ or if you would like to
run the conditions outside of suite you can execute:

.. GENERATED FROM PYTHON SOURCE LINES 37-49

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset

    # Dummy data
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    condition_results = check.conditions_decision(check.run(train_dataset, test_dataset))
    condition_results





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    [{'details': 'Test dataset contains 3 samples', 'category': <ConditionCategory.FAIL: 'FAIL'>, 'name': 'Test dataset size is greater or equal to 1000'}]



.. GENERATED FROM PYTHON SOURCE LINES 50-60

Add a condition to a check in a suite
-------------------------------------
If we want to add a conditon to a check within an existing suite, we should first
find the Check's ID within the suite, and then add the condition to it, by running
the relevant ``add_condition_`` method on that check's instance. See the next section
to understand how to do so.

The condition will then be appended to the list of conditions on that check (or be
the first one if no conditions are defined), and each condition will be evaluated
separately when running the suite.

.. GENERATED FROM PYTHON SOURCE LINES 62-70

Remove / Edit a Condition
=========================
Deepchecks provides different kinds of default suites, which come with pre-defined
conditions. You may want to remove a condition in case it isn't needed for you, or
you may want to change the condition's parameters (since conditions functions are immutable).

To remove a condition, start by printing the Suite and identifing the Check's ID,
and the Condition's ID:

.. GENERATED FROM PYTHON SOURCE LINES 70-76

.. code-block:: default


    from deepchecks.tabular.suites import train_test_validation

    suite = train_test_validation()
    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: CategoryMismatchTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is less or equal to 0
    	8: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	9: FeatureLabelCorrelationChange(ppscore_params={})
    		Conditions:
    			0: Train-Test features' Predictive Power Score difference is less than 0.2
    			1: Train features' Predictive Power Score is less than 0.7
    	10: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1
    	11: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1 for label drift
    	12: WholeDatasetDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 77-78

After we found the IDs we can remove the Condition:

.. GENERATED FROM PYTHON SOURCE LINES 78-86

.. code-block:: default


    # Access check by id
    check = suite[9]
    # Remove condition by id
    check.remove_condition(0)

    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: CategoryMismatchTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is less or equal to 0
    	8: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	9: FeatureLabelCorrelationChange(ppscore_params={})
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    	10: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1
    	11: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1 for label drift
    	12: WholeDatasetDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 87-89

Now if we want we can also re-add the Condition using the built-in methods on the check,
with a different parameter.

.. GENERATED FROM PYTHON SOURCE LINES 89-95

.. code-block:: default


    # Re-add the condition with new parameter
    check.add_condition_feature_pps_difference_less_than(0.01)

    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: CategoryMismatchTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is less or equal to 0
    	8: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	9: FeatureLabelCorrelationChange(ppscore_params={})
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    			2: Train-Test features' Predictive Power Score difference is less than 0.01
    	10: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1
    	11: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1 for label drift
    	12: WholeDatasetDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 96-102

Add a Custom Condition
======================
In order to write conditions we first have to know what value a given check produces.

Let's look at the check ``DatasetsSizeComparison`` and see it's return value in
order to write a condition for it.

.. GENERATED FROM PYTHON SOURCE LINES 102-115

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import DatasetsSizeComparison

    # We'll use dummy data for the purpose of this demonstration
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    result = DatasetsSizeComparison().run(train_dataset, test_dataset)
    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'Train': 9, 'Test': 3}



.. GENERATED FROM PYTHON SOURCE LINES 116-126

Now we know what the return value looks like. Let's add a new condition that validates
that the ratio between the train and test datasets size is inside a given range. To
create condition we need to use the ``add_condition`` method of the check which accepts
a condition name and a function. This function receives the value of the ``CheckResult``
that we saw above and should return either a boolean or a ``ConditionResult`` containing
a boolean and optional extra info that will be displayed in the Conditions Summary table.

*Note: When implementing a condition in a custom check, you may want to add a method
``add_condition_x()`` to allow any consumer of your check to apply the condition
(possibly with given parameters). For examples look at implemented Checks' source code*

.. GENERATED FROM PYTHON SOURCE LINES 126-148

.. code-block:: default


    from deepchecks.core import ConditionResult

    # Our parameters for the condition
    low_threshold = 0.4
    high_threshold = 0.6

    # Create the condition function
    def custom_condition(value: dict, low=low_threshold, high=high_threshold): 
        ratio = value['Test'] / value['Train']
        if low <= ratio <= high:
            return ConditionResult(ConditionCategory.PASS)
        else:
            # Note: if you doesn't care about the extra info, you can return directly a boolean
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}')

    # Create the condition name
    condition_name = f'Test-Train ratio is between {low_threshold} to {high_threshold}'

    # Create check instance with the condition 
    check = DatasetsSizeComparison().add_condition(condition_name, custom_condition)








.. GENERATED FROM PYTHON SOURCE LINES 149-152

Now we will use a Suite to demonstrate the action of the condition, since the suite
runs the condition for us automatically and prints out a Conditions Summary table
(for all the conditions defined on the checks within the suite):

.. GENERATED FROM PYTHON SOURCE LINES 152-162

.. code-block:: default


    from deepchecks.tabular import Suite

    # Using suite to run check & condition
    suite = Suite('Suite for Condition',
        check
    )

    suite.run(train_dataset, test_dataset)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Suite for Condition:
    |     | 0/1 [00:00<?, ? Check/s]                                                     

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Suite for Condition</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "32acb9c5741344e593415241261041c7": {
          "model_name": "AccordionModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "_titles": {
              "0": "Suite for Condition"
            },
            "children": [
              "IPY_MODEL_370615ef9af24232bdca4852b6349bc8"
            ],
            "layout": "IPY_MODEL_ff9a29fe823f4fe7943fc3df467c4663"
          }
        },
        "370615ef9af24232bdca4852b6349bc8": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_26e21a7a526a4278b21df45c56164c79",
              "IPY_MODEL_5e06c8f8c8134bc3be41fa3a54ec85ee",
              "IPY_MODEL_ba68935e5e004ce1b9d462ab14b0ab29",
              "IPY_MODEL_b8dd097c8a2d4836b14d8db85bb73d1d",
              "IPY_MODEL_54eaef7086e64735943b6dd653d77448"
            ],
            "layout": "IPY_MODEL_c11c3610bd6d4dc1ae9b40730fc9a1e0"
          }
        },
        "26e21a7a526a4278b21df45c56164c79": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_b840d4a18d3f46f99be956faca7a4fb3",
            "style": "IPY_MODEL_8832eb4addd2431abbea601b40773080",
            "value": "\n            <h1 id=\"summary_VZHQJY62ZEEQNSN2S8NN16UXF\">Suite for Condition</h1>\n            <p>\n                The suite is composed of the following checks: Datasets Size Comparison.<br>\n                Each check may contain conditions (which will result in pass / fail / warning / error\n                , represented by \n<span style=\"color: green;display:inline-block\">\u2713</span> /\n<span style=\"color: red;display:inline-block\">\u2716</span> /\n<span style=\"color: orange;font-weight:bold;display:inline-block\">!</span> /\n<span style=\"color: firebrick;font-weight:bold;display:inline-block\">\u2048</span>\n) as well as other outputs such as plots or tables.<br>\n                Suites, checks and conditions can all be modified. Read more about\n                <a href=https://docs.deepchecks.com/en/stable/examples/guides/create_a_custom_suite.html?utm_source=display_output&utm_medium=referral&utm_campaign=suite_link target=\"_blank\">custom suites</a>.\n            </p>\n\n"
          }
        },
        "b840d4a18d3f46f99be956faca7a4fb3": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "8832eb4addd2431abbea601b40773080": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "5e06c8f8c8134bc3be41fa3a54ec85ee": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_79e01cb71acd432e976cd6f21a0b9218",
              "IPY_MODEL_eb42f7c9ef3e402fb0969778512bfec7"
            ],
            "layout": "IPY_MODEL_ef7753a29b3b41bdbdb399f15aa6ecc2"
          }
        },
        "79e01cb71acd432e976cd6f21a0b9218": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_02ccfeb6abbf4e1c80c7e435075724c1",
            "style": "IPY_MODEL_9937107de6d0460a99f63d14294e6e24",
            "value": "<span id=\"summary_VZHQJY62ZEEQNSN2S8NN16UXF-section-5GZPL\"></span>"
          }
        },
        "02ccfeb6abbf4e1c80c7e435075724c1": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9937107de6d0460a99f63d14294e6e24": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "eb42f7c9ef3e402fb0969778512bfec7": {
          "model_name": "AccordionModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "_titles": {
              "0": "Didn't Pass"
            },
            "children": [
              "IPY_MODEL_f871774bf9a04a4bb6249526591f6faf"
            ],
            "layout": "IPY_MODEL_f5e63ba4769b42728df6225bb9cd97df",
            "selected_index": null
          }
        },
        "f871774bf9a04a4bb6249526591f6faf": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_26b07294d3074b64ac3a576e13fadd5f",
              "IPY_MODEL_c13d1ee6cf63416bba658969ae27495a",
              "IPY_MODEL_cb91feeb6c6f43abaee0d34c23568e2d"
            ],
            "layout": "IPY_MODEL_204e87fd90c043219e303a4e69f47923"
          }
        },
        "26b07294d3074b64ac3a576e13fadd5f": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_09872e258a7841aba9d8da1bc771d7c5",
            "style": "IPY_MODEL_4ae81ad57b124edc98dfdad6b6caf7a9",
            "value": "<style type=\"text/css\">\n#T_61fbd_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_61fbd_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_61fbd_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_61fbd_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_61fbd_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_61fbd_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Check</th>\n      <th class=\"col_heading level0 col2\" >Condition</th>\n      <th class=\"col_heading level0 col3\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_61fbd_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_61fbd_row0_col1\" class=\"data row0 col1\" ><a href=\"#DatasetsSizeComparison_VZHQJY62ZEEQNSN2S8NN16UXF-section-5GZPL\">Datasets Size Comparison</a></td>\n      <td id=\"T_61fbd_row0_col2\" class=\"data row0 col2\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_61fbd_row0_col3\" class=\"data row0 col3\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "09872e258a7841aba9d8da1bc771d7c5": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "4ae81ad57b124edc98dfdad6b6caf7a9": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c13d1ee6cf63416bba658969ae27495a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_4a7eecd397674943ac2fb598d15dd07e",
            "style": "IPY_MODEL_72f967548de642139b892fb22668b5be",
            "value": "<hr style=\"background-color: #eee;border: 0 none;color: #eee;height: 4px;\">"
          }
        },
        "4a7eecd397674943ac2fb598d15dd07e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "72f967548de642139b892fb22668b5be": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "cb91feeb6c6f43abaee0d34c23568e2d": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_eeb9958bb6d04061a943ce62b44b7135",
              "IPY_MODEL_ab94e7e9af754e2cb3e28ced2ec9d924",
              "IPY_MODEL_db6bc4bc96b940d7840ffb2c61df4393",
              "IPY_MODEL_c6c549e5c1a04ffa8e887760c5256edd"
            ],
            "layout": "IPY_MODEL_26059f01d65c48948a672cebef8d5664"
          }
        },
        "eeb9958bb6d04061a943ce62b44b7135": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_292e9a20888245a8a3d130a5e81e5de8",
            "style": "IPY_MODEL_83ea25ce878c4d88a37a4a1a14bb0d4f",
            "value": "<h4 id=\"DatasetsSizeComparison_VZHQJY62ZEEQNSN2S8NN16UXF-section-5GZPL\"><b>Datasets Size Comparison</b></h4>"
          }
        },
        "292e9a20888245a8a3d130a5e81e5de8": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "83ea25ce878c4d88a37a4a1a14bb0d4f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "ab94e7e9af754e2cb3e28ced2ec9d924": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_a01590d45a5140e792a1c1f817d667aa",
            "style": "IPY_MODEL_067249e4e2644122999fc57a80880b73",
            "value": "<p>Verify test dataset size comparing it to the train dataset size.</p>"
          }
        },
        "a01590d45a5140e792a1c1f817d667aa": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "067249e4e2644122999fc57a80880b73": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "db6bc4bc96b940d7840ffb2c61df4393": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_74357e14686f41ea84afb70d73c26c2b",
            "style": "IPY_MODEL_d13cf4ede72b426f906b9bb5065a507f",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_7a697_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7a697_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7a697_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7a697_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_7a697_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_7a697_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_7a697_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_7a697_row0_col1\" class=\"data row0 col1\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_7a697_row0_col2\" class=\"data row0 col2\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "74357e14686f41ea84afb70d73c26c2b": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d13cf4ede72b426f906b9bb5065a507f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c6c549e5c1a04ffa8e887760c5256edd": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_dde14f08d5144c3b92ec41014c6c1cac",
              "IPY_MODEL_a4617fb039374dc0a4d21cdc17c40032",
              "IPY_MODEL_84839af40ff34374a0bafa379b437416"
            ],
            "layout": "IPY_MODEL_c6b6d582404d4a93a96975331e64d746"
          }
        },
        "dde14f08d5144c3b92ec41014c6c1cac": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_adb1a3222f8d4c84b289b5820ed3a832",
            "style": "IPY_MODEL_9493de89706b4007af03ce998e5994ab",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "adb1a3222f8d4c84b289b5820ed3a832": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9493de89706b4007af03ce998e5994ab": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "a4617fb039374dc0a4d21cdc17c40032": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_7724a7e7021546afb77666f5f8e4b1fa",
            "style": "IPY_MODEL_869027c156a546478bf992e0ddea3776",
            "value": "<style type=\"text/css\">\n#T_abeb5_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_abeb5_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_abeb5_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_abeb5_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_abeb5_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_abeb5_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Train</th>\n      <th class=\"col_heading level0 col1\" >Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_abeb5_level0_row0\" class=\"row_heading level0 row0\" >Size</th>\n      <td id=\"T_abeb5_row0_col0\" class=\"data row0 col0\" >9</td>\n      <td id=\"T_abeb5_row0_col1\" class=\"data row0 col1\" >3</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "7724a7e7021546afb77666f5f8e4b1fa": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "869027c156a546478bf992e0ddea3776": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "84839af40ff34374a0bafa379b437416": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_5f6b713ba48b4c94ae06f837cdfe04c6",
            "style": "IPY_MODEL_cd4a2be7efd3447d94903dd71a68de17",
            "value": "<br><a href=\"#summary_VZHQJY62ZEEQNSN2S8NN16UXF-section-5GZPL\" style=\"font-size: 14px;\">Go to top</a>"
          }
        },
        "5f6b713ba48b4c94ae06f837cdfe04c6": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "cd4a2be7efd3447d94903dd71a68de17": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c6b6d582404d4a93a96975331e64d746": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "26059f01d65c48948a672cebef8d5664": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "204e87fd90c043219e303a4e69f47923": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f5e63ba4769b42728df6225bb9cd97df": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ef7753a29b3b41bdbdb399f15aa6ecc2": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ba68935e5e004ce1b9d462ab14b0ab29": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_cc6446f4d5e6487cbe739d611041e99e",
              "IPY_MODEL_4278bd792c5b4b499dd288fd3538ff0e"
            ],
            "layout": "IPY_MODEL_2fbacdf89f1b41aa9e8d4a8a21fce2db"
          }
        },
        "cc6446f4d5e6487cbe739d611041e99e": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c158563dfb2c401ea38665e0ea8e5bc6",
            "style": "IPY_MODEL_84b9ab41049f490c9b95a42cd13e52ed"
          }
        },
        "c158563dfb2c401ea38665e0ea8e5bc6": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "84b9ab41049f490c9b95a42cd13e52ed": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "4278bd792c5b4b499dd288fd3538ff0e": {
          "model_name": "AccordionModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "_titles": {
              "0": "Passed"
            },
            "children": [
              "IPY_MODEL_fc055d7f29244af2b3ee3680e21c406d"
            ],
            "layout": "IPY_MODEL_6891722b7d034439ab1686685403bbb6",
            "selected_index": null
          }
        },
        "fc055d7f29244af2b3ee3680e21c406d": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_7f63266a4ac54b7f951edc6a7b534504",
            "style": "IPY_MODEL_6fb63884d9d04979aae17e4604a20194",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "7f63266a4ac54b7f951edc6a7b534504": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "6fb63884d9d04979aae17e4604a20194": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "6891722b7d034439ab1686685403bbb6": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "2fbacdf89f1b41aa9e8d4a8a21fce2db": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "b8dd097c8a2d4836b14d8db85bb73d1d": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_3c01b3df4c0d463f8375a8f1d5e1f441",
              "IPY_MODEL_ae66648316a84b5ea103b58be1af9993"
            ],
            "layout": "IPY_MODEL_d396e767b4a0461d99bf8b5cc6632644"
          }
        },
        "3c01b3df4c0d463f8375a8f1d5e1f441": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_d1dfbee5c43f4a7b83ad8d2f4d405ba4",
            "style": "IPY_MODEL_445b8faa2b434410a6d237458b77c497"
          }
        },
        "d1dfbee5c43f4a7b83ad8d2f4d405ba4": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "445b8faa2b434410a6d237458b77c497": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "ae66648316a84b5ea103b58be1af9993": {
          "model_name": "AccordionModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "_titles": {
              "0": "Other"
            },
            "children": [
              "IPY_MODEL_fa6359e2c8d142d8a8903b2d722416be"
            ],
            "layout": "IPY_MODEL_b6980b5c685b4572aafcdc02c8d9d1ee",
            "selected_index": null
          }
        },
        "fa6359e2c8d142d8a8903b2d722416be": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c600d97e7d7a4e638df87eaed6362dc5",
            "style": "IPY_MODEL_2641235db0fa4186806b55b50716d86f",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "c600d97e7d7a4e638df87eaed6362dc5": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "2641235db0fa4186806b55b50716d86f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b6980b5c685b4572aafcdc02c8d9d1ee": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d396e767b4a0461d99bf8b5cc6632644": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "54eaef7086e64735943b6dd653d77448": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_c1cce17e14c84cf7aa8f177c8f47548a",
              "IPY_MODEL_045feabd89784991ade442d50af1c2b9"
            ],
            "layout": "IPY_MODEL_f69dc57371184fa9973386dc029e6081"
          }
        },
        "c1cce17e14c84cf7aa8f177c8f47548a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_3c3961920c2c4042b0608f5fb7797040",
            "style": "IPY_MODEL_25dbd61ae93d4675b932c3717e344b76"
          }
        },
        "3c3961920c2c4042b0608f5fb7797040": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "25dbd61ae93d4675b932c3717e344b76": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "045feabd89784991ade442d50af1c2b9": {
          "model_name": "AccordionModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "_titles": {
              "0": "Didn't Run"
            },
            "children": [
              "IPY_MODEL_26380c23363d4e8583151936454479b3"
            ],
            "layout": "IPY_MODEL_af7b2272848a47e085d37e2a7e9ec185",
            "selected_index": null
          }
        },
        "26380c23363d4e8583151936454479b3": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_4bbe1dcd8d474d95b4437b3fa4636649",
            "style": "IPY_MODEL_48edce16052c41fc9ace7fc06477bead",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "4bbe1dcd8d474d95b4437b3fa4636649": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "48edce16052c41fc9ace7fc06477bead": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "af7b2272848a47e085d37e2a7e9ec185": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f69dc57371184fa9973386dc029e6081": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c11c3610bd6d4dc1ae9b40730fc9a1e0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ff9a29fe823f4fe7943fc3df467c4663": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "32acb9c5741344e593415241261041c7"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 163-168

Set Custom Condition Category
=============================
When writing your own condition logic, you can decide to mark a condition result
as either fail or warn, by passing the category to the ConditionResult object.
For example we can even write condition which sets the category based on severity of the result:

.. GENERATED FROM PYTHON SOURCE LINES 168-184

.. code-block:: default


    from deepchecks.core import ConditionCategory, ConditionResult

    # Our parameters for the condition
    low_threshold = 0.3
    high_threshold = 0.7

    # Create the condition function for check `DatasetsSizeComparison`
    def custom_condition(value: dict): 
        ratio = value['Test'] / value['Train']
        if low_threshold <= ratio <= high_threshold:
            return ConditionResult(ConditionCategory.PASS)
        elif ratio < low_threshold:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.FAIL)
        else:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.WARN)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.148 seconds)


.. _sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_configure_check_conditions.py <plot_configure_check_conditions.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_configure_check_conditions.ipynb <plot_configure_check_conditions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
